fixed some contrast and layout issues

--- a/a/mae__tis/styles.css
+++ b/a/mae__tis/styles.css
@@ -40,6 +40,7 @@ page {
     align-content: center;
     align-items: center;
     transition: height 0.5s cubic-bezier(.75,0,.25,1) 0.5s, width 0.5s cubic-bezier(.75,0,.25,1) 0.5s, border-radius 0.5s cubic-bezier(.75,0,.25,1) 0.5s;
+    padding-bottom: 15px;
 }
 
 @media screen and (min-aspect-ratio: 0.74) {
@@ -59,8 +60,7 @@ page {
 }
 
 banner {
-    width: calc(100% - 20px);
-    aspect-ratio: 20/9;
+    width: calc(100% - 20px) !important;
     background: url(res/banner.jpg);
     background-size: cover;
     background-position: center;
@@ -70,6 +70,7 @@ banner {
     justify-content: flex-end;
     padding-right: 20px;
     margin-bottom: 20px;
+    padding-top: 14.161vh;
 }
 
 page::-webkit-scrollbar {
@@ -336,26 +337,23 @@ release {
     justify-content: center;
     background-size: cover;
     background-position: center;
-    min-height: 40px;
+    min-height: 56px;
     border-radius: 15px;
     color: var(--RELEASESecondaryColor);
     margin-bottom: 10px;
-
     reltitle {
         font-size: 24px;
-        font-weight: 900;
-        line-height: 1;
+    font-weight: 900;
+    line-height: 1;
     }
-    
     relartist {
         font-size: 10px;
-        font-weight: 500;
+    font-weight: 500;
     }
-    
     id {
         font-size: 8px;
-        font-weight: 500;
-        line-height: 16px;
+    font-weight: 500;
+    line-height: 16px;
     }
     a {
         color: unset;
@@ -366,4 +364,5 @@ release {
     a:hover {
         text-decoration: underline;
     }
+;
 }
